<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbackground"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.WelcomeActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/skywarnhead"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admittanceTest"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admittanceDisc"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginLeft="@dimen/standard16dp"
        android:layout_marginRight="@dimen/standard16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applicantInfo"
        android:layout_marginTop="@dimen/standard8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:textSize="18sp"
            android:textAlignment="textEnd"/>
        <EditText
            android:id="@+id/firstName"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/firstNameHint"
            android:inputType="textCapWords"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/standard8dp"
            android:textColor="@color/headText"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textSize="18sp"
            android:textAlignment="textEnd"/>
        <EditText
            android:id="@+id/lastName"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastNameHint"
            android:inputType="textCapWords"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/standard8dp"
            android:textColor="@color/headText"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard8dp"
            android:text="@string/declaration"
            android:textColor="@color/headText"
            android:paddingLeft="@dimen/standard8dp"
            android:id="@+id/agree"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#212121"
        android:text="@string/beginQuiz"
        android:layout_margin="@dimen/standard8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="startQuiz"/>
</LinearLayout>
