<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbackground"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.Questions1of5Activity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splashbackground"
        android:orientation="vertical"
        tools:context="com.example.android.quizapp.Questions1of5Activity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1Label"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/standard16dp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:layout_marginLeft="@dimen/standard16dp"
            android:textSize="16sp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/standard16dp"
            android:id="@+id/question1">
            <RadioButton
                android:id="@+id/radio1_question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option1"
                android:paddingLeft="@dimen/standard8dp"
                android:textColor="#757575"/>
            <RadioButton android:id="@+id/radio2_question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option2"
                android:paddingLeft="@dimen/standard8dp"
                android:textColor="#757575"/>
            <RadioButton android:id="@+id/radio3_question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option3"
                android:paddingLeft="@dimen/standard8dp"
                android:textColor="#757575"/>
            <RadioButton android:id="@+id/radio4_question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option4"
                android:paddingLeft="@dimen/standard8dp"
                android:textColor="#757575"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/standard16dp"
        android:layout_alignParentRight="true"
        android:text="@string/next"
        android:background="@color/bodyText"
        android:onClick="nextQuestion"/>
</RelativeLayout>


