<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbackground"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.Questions4of5Activity">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splashbackground"
        android:orientation="vertical"
        tools:context="com.example.android.quizapp.Questions4of5Activity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4Label"
            android:textSize="24sp"
            android:layout_margin="@dimen/standard16dp"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:layout_marginLeft="@dimen/standard16dp"
            android:layout_marginRight="@dimen/standard16dp"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question4Hint"
            android:layout_margin="@dimen/standard16dp"
            android:inputType="textCapWords"
            android:textColor="@color/headText"
            android:id="@+id/cape"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/standard16dp"
        android:layout_alignParentRight="true"
        android:text="@string/next"
        android:background="@color/bodyText"
        android:onClick="nextQuestion"/>
</RelativeLayout>

